fixed overflow Y issue

--- a/css/input.scss
+++ b/css/input.scss
@@ -7,21 +7,6 @@ $link-color: #75c372;
 $main-color: #0b4e70;
 $font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
-body {
-  font-family: $font-family;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
-.container {
-  @include grid-container;
-  width: 100vw;
-  height: 100vh;
-}
-
 // bourbon neat media breakpoints
 
 $my-default-grid: (
@@ -63,6 +48,24 @@ $landscape-medium: (
   media:"screen and (min-width: 670px) and (max-width: 700px) and (orientation: landscape)"
 );
 
+body {
+  font-family: $font-family;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y:hidden;
+
+};
+
+.container {
+  @include grid-container;
+  width: 100vw;
+  height: 100vh;
+
+};
+
 .nav {
   @include grid-column(12,$my-default-grid);
   float: left;
@@ -101,6 +104,7 @@ $landscape-medium: (
     display: none;
   }
   @include grid-media($medium-grid) {
+
     #toplinks {
       display: none;
     }
